--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -164,10 +164,10 @@
                                     <h4 class="mt-2">Recent Activity</h4>
                                 </div>
                                 <div class="col text-right mr-2">
-                                    <h4 class="mt-2"><a asp-controller="Tickets" asp-action="ProjectIndex" asp-route-id="@Model.Id" class="btn btn-secondary" >View All Ticket</a></h4>
+                                    <h4 class="mt-2"><a asp-controller="Tickets" asp-action="ProjectIndex" asp-route-id="@Model.Id" class="btn btn-secondary">View All Ticket</a></h4>
                                 </div>
                             </div>
-                            <hr class="mt-0"/>
+                            <hr class="mt-0" />
                             @if (tickets.Count >= 5)
                             {
                                 var count = 1;
@@ -177,29 +177,58 @@
                                     {
                                         break;
                                     }
+                                    @if (ticket.DeveloperId != null)
+                                    {
+                                        byte[] imageData = (await UserManager.FindByIdAsync(ticket.DeveloperId)).ImageData;
+                                        string imageType = (await UserManager.FindByIdAsync(ticket.DeveloperId)).ContentType;
+                                        <div class="post">
+                                            <div class="user-block">
+                                                <img class="img-circle img-bordered-sm" src="@imageService.DecodeFileAvatar(imageData, imageType)" alt="user image">
+                                                <span class="username">
+                                                    <a>@((await UserManager.FindByIdAsync(ticket.DeveloperId)).FullName) - @((await UserManager.GetRolesAsync(await UserManager.FindByIdAsync(ticket.DeveloperId))).First())</a>
+                                                </span>
+                                                <span class="description">Shared publicly - @ticket.Created.ToString("dd MMMM yyyy - hh:mm tt")</span>
+                                            </div>
+                                            <!-- /.user-block -->
+                                            <a class="text-dark" asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id">
+                                                @ticket.Description
+                                            </a>
 
-                                    byte[] imageData = (await UserManager.FindByIdAsync(ticket.DeveloperId)).ImageData;
-                                    string imageType = (await UserManager.FindByIdAsync(ticket.DeveloperId)).ContentType;
-                                    <div class="post">
-                                        <div class="user-block">
-                                            <img class="img-circle img-bordered-sm" src="@imageService.DecodeFileAvatar(imageData, imageType)" alt="user image">
-                                            <span class="username">
-                                                <a>@((await UserManager.FindByIdAsync(ticket.DeveloperId)).FullName) - @((await UserManager.GetRolesAsync(await UserManager.FindByIdAsync(ticket.DeveloperId))).First())</a>
-                                            </span>
-                                            <span class="description">Shared publicly - @ticket.Created.ToString("dd MMMM yyyy - hh:mm tt")</span>
-                                        </div>
-                                        <!-- /.user-block -->
-                                        <a class="text-dark" asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id">
-                                            @ticket.Description
-                                        </a>
-                            
-                                        <div class="row mt-2">
-                                            <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="link-black text-sm mr-2"><i class="fas fa-comment-dots"></i> @ticket.Comments.Count Comments </a>
-                                            <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="link-black text-sm mr-2"> <i class="fas fa-file"></i> @((ApplicationDbContext.Attachment.Where(a => a.TicketId == ticket.Id).ToList()).Count) Files Attached </a>  
-                                            <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="link-black text-sm mr-2"><i class="fas fa-user-edit"></i> @((ApplicationDbContext.TicketHistory.Where(a => a.TicketId == ticket.Id).ToList()).Count) Changes </a>
-                                        </div>
+                                            <div class="row mt-2">
+                                                <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="link-black text-sm mr-2"><i class="fas fa-comment-dots"></i> @ticket.Comments.Count Comments </a>
+                                                <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="link-black text-sm mr-2"> <i class="fas fa-file"></i> @((ApplicationDbContext.Attachment.Where(a => a.TicketId == ticket.Id).ToList()).Count) Files Attached </a>
+                                                <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="link-black text-sm mr-2"><i class="fas fa-user-edit"></i> @((ApplicationDbContext.TicketHistory.Where(a => a.TicketId == ticket.Id).ToList()).Count) Changes </a>
+                                            </div>
 
-                                    </div>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        byte[] imageData = null;
+                                        string imageType = null;
+                                        <div class="post">
+                                            <div class="user-block">
+                                                <img class="img-circle img-bordered-sm" src="@imageService.DecodeFileAvatar(imageData, imageType)" alt="user image">
+                                                <span class="username">
+                                                    <a>Un-Assigned Ticket - Create By Submitter - @((await UserManager.FindByIdAsync(ticket.OwnnerId)).FullName)</a>
+                                                </span>
+                                                <span class="description">Shared publicly - @ticket.Created.ToString("dd MMMM yyyy - hh:mm tt")</span>
+                                            </div>
+                                            <!-- /.user-block -->
+                                            <a class="text-dark" asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id">
+                                                @ticket.Description
+                                            </a>
+
+                                            <div class="row mt-2">
+                                                <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="link-black text-sm mr-2"><i class="fas fa-comment-dots"></i> @ticket.Comments.Count Comments </a>
+                                                <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="link-black text-sm mr-2"> <i class="fas fa-file"></i> @((ApplicationDbContext.Attachment.Where(a => a.TicketId == ticket.Id).ToList()).Count) Files Attached </a>
+                                                <a asp-controller="Tickets" asp-action="Details" asp-route-id="@ticket.Id" class="link-black text-sm mr-2"><i class="fas fa-user-edit"></i> @((ApplicationDbContext.TicketHistory.Where(a => a.TicketId == ticket.Id).ToList()).Count) Changes </a>
+                                            </div>
+
+                                        </div>
+                                    }
+
+
 
                                     count++;
                                 }
