--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -41,7 +41,7 @@
 
                         <input type="hidden" asp-for="Created" class="form-control" />
 
-                        @if ((await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Admin.ToString())))
+                        @if ((await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Admin.ToString())) || (await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.ProjectManager.ToString())))
                         {
                             <div class="form-group form-check">
                                 <label class="form-check-label">
@@ -56,6 +56,34 @@
                             <div class="form-group">
                                 <label asp-for="ProjectId" class="control-label"></label>
                                 <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                                <span asp-validation-for="ProjectId" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="TicketTypeId" class="control-label"></label>
+                                <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
+                                <span asp-validation-for="TicketTypeId" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="PriorityId" class="control-label"></label>
+                                <select asp-for="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
+                                <span asp-validation-for="PriorityId" class="text-danger"></span>
+                            </div>
+                        }
+                        else if ((await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Submitter.ToString())))
+                        {
+                            <div class="form-group form-check">
+                                <label class="form-check-label">
+                                    <input class="form-check-input" disabled asp-for="IsAssigned" /> @Html.DisplayNameFor(model => model.IsAssigned)
+                                </label>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="DeveloperId" class="control-label"></label>
+                                <select asp-for="DeveloperId" class="form-control" asp-items="ViewBag.DeveloperId" disabled></select>
+                                <span asp-validation-for="DeveloperId" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="ProjectId" class="control-label"></label>
+                                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId" disabled></select>
                                 <span asp-validation-for="ProjectId" class="text-danger"></span>
                             </div>
                             <div class="form-group">
