--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<BugTracker.Models.Ticket>
-
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<CustomUser> SignInManager
+@inject UserManager<CustomUser> UserManager
+@using BugTracker.Data.Enums
 @{
     ViewData["Title"] = "Tickets";
 }
@@ -22,11 +25,86 @@
                 </div>
 
             </div>
-          
+
             <div class="card-body">
                 <div class="row">
                     <div class="col-4">
-                        <a class="btn btn-primary" asp-action="Create">Create New Ticket</a>
+                        @if (!(await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Developer.ToString())))
+                        {
+                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+                                <i class="fas fa-plus-square"></i> Create New Ticket
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Create New Ticket</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <form asp-controller="Tickets" asp-action="Create" method="post">
+                                            <div class="modal-body">
+
+
+                                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                <div class="form-group">
+                                                    <label class="control-label">Name</label>
+                                                    <input name="Name" class="form-control" />
+
+                                                </div>
+                                                <div class="form-group">
+                                                    <label class="control-label">Description</label>
+                                                    <input name="Description" class="form-control" />
+
+                                                </div>
+                                                <div class="form-group">
+                                                    <label name="ProjectId" class="control-label">Project</label>
+                                                    <select name="ProjectId" class="form-control" asp-items="@ViewBag.ProjectId"></select>
+                                                </div>
+                                                @if (!(await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Submitter.ToString())))
+                                                {
+                                                    <div class="form-group form-check">
+                                                        <label class="form-check-label">
+                                                            <input class="form-check-input" name="IsAssigned" type="checkbox" value="true" /> Assigned?
+                                                        </label>
+                                                    </div>
+
+                                                    <div class="form-group">
+                                                        <label name="DeveloperId" class="control-label">Developer</label>
+                                                        <select name="DeveloperId" class="form-control" asp-items="@ViewBag.DeveloperId"></select>
+                                                    </div>
+                                                }
+
+
+
+                                                <div class="form-group">
+                                                    <label name="StatusId" class="control-label">Status</label>
+                                                    <select name="StatusId" class="form-control" asp-items="@ViewBag.StatusId"></select>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label name="PriorityId" class="control-label">Priority</label>
+                                                    <select name="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label name="TicketTypeId" class="control-label">TicketType</label>
+                                                    <select name="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
+                                                </div>
+
+                                            </div>
+                                            <div class="modal-footer">
+
+                                                <button type="submit" class="btn btn-primary">Create</button>
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+
                     </div>
                 </div>
                 <table id="viewTicket" class="table table-striped table-hover">
@@ -108,7 +186,11 @@
                                 <td class="project-actions text-right">
                                     <a class="btn btn-primary btn-sm mb-1" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-folder"></i> View</a>
                                     <a class="btn btn-info btn-sm mb-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i> Edit</a>
-                                    <a class="btn btn-danger btn-sm mb-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i> Delete</a>
+                                    @if ((await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.Admin.ToString())) || (await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), Roles.ProjectManager.ToString())))
+                                    {
+                                        <a class="btn btn-danger btn-sm mb-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i> Delete</a>
+                                    }
+
                                 </td>
                             </tr>
                         }
