--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -20,9 +20,10 @@
         <div class="col-lg-3">
             <div class="shadow-lg p-3 mb-5 bg-dark rounded">
                 <div class="row">
-                    <div class="col border-right">
+                    <div class="col">
                         <a class="nav-link" asp-area="Identity" asp-page="/Account/Login"><h2 style="color:darkgrey" class="text-center">Login</h2></a>
                     </div>
+                    <div class="vertical-line"></div>
                     <div class="col">
                         <a class="nav-link" asp-area="Identity" asp-page="/Account/Register"><h2 class="text-center" style="color:#1cd5db">Register</h2></a>
                     </div>
