--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -53,6 +53,11 @@ for details on configuring this project to bundle and minify static web assets. 
     position: relative;
 }
 
+.vertical-line {
+    border-left: 1px solid white;
+   
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
